--- a/css/style.css
+++ b/css/style.css
@@ -585,7 +585,7 @@ body::-webkit-scrollbar {
     right: 0;
     width: 100%;
     height: 100%;
-    background: url('images/png/Menu_back.png');
+    background: url('../images/png/Menu_back.png');
     /* background: #0D087A; */
     background-repeat: no-repeat;
     background-size: cover;
