--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,3 +1,4 @@
+
 .contact-us{
   display: flex;
     height: 100%;
@@ -60,43 +61,6 @@ justify-content: center;
 
 
 }
-  /*.container{
-    height:480px;
-    width:939px;
-    border: 1px solid #FFFFFF;
-    border-right: #0C1011;
-    box-sizing: border-box;
-    align:justify;
-    margin-top:108px;
-    margin-left:213px;
-    background-size: cover;
-  /*  display:none;
-
-  }*/
-  /*.eventcontent{
-    left:854px;
-    margin-top:360px;
-    background-color: #0C1011;
-    height:479px;
-    width:280px;
-    border: 1px solid #FFFFFF;
-    border-left: #0C1011;
-  }*/
-
-  /*.eventcontent{
-    display:grid;
-    grid-template-areas: overlap;
-    grid-area: overlap;
-    grid-template-columns: 1fr;
-    margin-left:1190px;
-    /*margin-top:190px;
-    background-color: #0C1011;
-    height:680px;
-    width:150px;
-    border: 1px solid #FFFFFF;
-    border-left: #0C1011;
-
-  }*/
 
   .content{
     position: absolute;
@@ -240,48 +204,10 @@ justify-content: center;
 
   /*display:none;*/
 }
-.links,#one{
-  display:none;
-  position: absolute;
-width: 200px;
-height: 410px;
-left: 33px;
-top: 1300px;
 
-font-family: Qanelas;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 10px;
-/* or 62% */
-
-
-color: #FFFFFF;
-}
-.colorclass{
-  display: none;
-      color:white;
-      font-size: 20px;
+    #footer-margin{
+      margin-top:900px;
     }
-    .contact-content{
-      display: none;
-      position: relative;
-      left:8.33%;
-  right: 39.44%;
-  top: 13.09%;
-  bottom: 33.38%;
-
-  font-family: Bebas Neue;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 38px;
-  line-height: 46px;
-  background: linear-gradient(to right, #E38CF2,white);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-
-    }
-
 
 
 img { max-width: 100%; height: auto; }
@@ -295,6 +221,7 @@ img { max-width: 100%; height: auto; }
     background-image: url(../images/png/register-mobile.png);
     background-size: contain;
     width:100%;
+    height:auto;
     display: block;
     background-repeat: round;
 
@@ -390,65 +317,13 @@ img { max-width: 100%; height: auto; }
       text-align: justify;
 
     }
-.colorclass{
-  display: block;
-      color:white;
-      font-size: 20px;
-    }
-    .contact-content{
-      display: block;
-      position: relative;
-      left:8.33%;
-  right: 39.44%;
-  top: 13.09%;
-  bottom: 33.38%;
-
-  font-family: Bebas Neue;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 38px;
-  line-height: 46px;
-  background: linear-gradient(to right, #E38CF2,white);
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-
-    }
-    .links,#one{
-      display: block;
-      position: absolute;
-  width: 200px;
-  height: 410px;
-  left: 33px;
-  top: 1300px;
-
-  font-family: Qanelas;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 10px;
-  /* or 62% */
-
-
-  color: #FFFFFF;
-    }
 
     body
     {
       display:block;
+      background-color:#0B083D;
+
     }
-    /*.container{
-
-     display:block;
-     margin-top:10px;
-     margin-left:-26vh;
-     width:320px;
-     height:720px;
-     border:none;
-     background-color: black;
-     background-size: cover;
-
-
-    }*/
     .container{
 
      width:300px;
@@ -465,6 +340,7 @@ img { max-width: 100%; height: auto; }
 
 
 }
+
 
 @media only screen and (min-width:400px) and (max-width:600px)
 {
@@ -485,47 +361,6 @@ img { max-width: 100%; height: auto; }
       width:100%;
       height:140%;
       background-repeat: no-repeat;
-    }
-    .colorclass{
-      display: block;
-      color:white;
-      font-size: 20px;
-    }
-    .contact-content{
-      display: block;
-      position: relative;
-      left:8.33%;
-right: 39.44%;
-top: 13.09%;
-bottom: 33.38%;
-
-font-family: Bebas Neue;
-font-style: normal;
-font-weight: normal;
-font-size: 38px;
-line-height: 46px;
-background: linear-gradient(to right, #E38CF2,white);
-            -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
-
-    }
-    .links,#one{
-      display: block;
-      position: absolute;
-width: 200px;
-height: 410px;
-left: 33px;
-top: 1300px;
-
-font-family: Qanelas;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 10px;
-/* or 62% */
-
-
-color: #FFFFFF;
     }
     .content{
       display:block;
@@ -616,6 +451,7 @@ color: #FFFFFF;
     {
       display:block;
       height:200%;
+      background-color:#0B083D;
     }
   /*  .container{
 
@@ -634,7 +470,7 @@ color: #FFFFFF;
 
      width:350px;
      height:720px;
-     top:75%;
+     top:70%;
      left:50%;
      transform:translate(-50%,-50%);
      border:none;
@@ -643,6 +479,10 @@ color: #FFFFFF;
 
 
     }
+    #footer-margin{
+      margin-top:850px;
+    }
+
 
 }
 @media only screen and (min-width:600px) and (max-width:700px)
@@ -664,49 +504,10 @@ color: #FFFFFF;
       background-image: url(../images/png/contact-mobile.png);
       background-size: contain;
       width:100%;
-      height:1700px;
+      height:auto; /*1700*/
       background-repeat: no-repeat;
     }
-    .colorclass{
-      display: block;
-      color:white;
-      font-size: 20px;
-    }
-    .contact-content{
-      display: block;
-      position: relative;
-      left:8.33%;
-right: 39.44%;
-top: 7.09%;
-bottom: 33.38%;
 
-font-family: Bebas Neue;
-font-style: normal;
-font-weight: normal;
-font-size: 38px;
-line-height: 46px;
-background: linear-gradient(to right, #E38CF2,white);
-            -webkit-text-fill-color: transparent;
-            -webkit-background-clip: text;
-
-    }
-    .links,#one{
-      position: absolute;
-width: 200px;
-height: 410px;
-left: 33px;
-top: 1300px;
-
-font-family: Qanelas;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 10px;
-/* or 62% */
-
-
-color: #FFFFFF;
-    }
     .content{
       display:block;
       font-size: 50px;
@@ -715,10 +516,7 @@ color: #FFFFFF;
       margin-top: -10px;
 
     }
-    .wrapper,.eventcontent{
-    /*  display:block;
-      width:100%;*/
-    }
+
     .register{
       position: absolute;
       margin-top:130px;
@@ -791,24 +589,7 @@ color: #FFFFFF;
       text-align: justify;
 
     }
-    .links,#one{
-      display: block;
-      position: absolute;
-    width: 200px;
-    height: 410px;
-    left: 33px;
-    top: 1300px;
 
-    font-family: Qanelas;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 10px;
-    /* or 62% */
-
-
-    color: #FFFFFF;
-    }
 
 
     /*.container{
@@ -825,6 +606,10 @@ color: #FFFFFF;
 
 
     }*/
+    body{
+      background-color:#0B083D;
+      height: auto;
+    }
     .container{
 
      width:410px;
@@ -949,7 +734,7 @@ color: #FFFFFF;
       background-size: contain;
       overflow: scroll;
       height: 200%;
-
+      background-color: #0B083D
 
     }
   /*  .container{
@@ -1096,6 +881,7 @@ color: #FFFFFF;
       background-size: contain;
       height: 300%;
       overflow: scroll;
+      background-color: #0B083D
     }
   /*  .container{
 
